# bammap2

./: .gitignore  CHANGE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  pixi.toml  recipe.yaml
.cargo/: config.toml
.github/workflows/: release.yml
examples/: test.bam  test.fa  test.sh
src/: align.rs  cli.rs  lib.rs  main.rs
tests/: index_tests.rs
