[package]
name = "bammap2"
version = "0.1.0"
edition = "2021"
description = "A lightweight wrapper to run minimap2 (v2.30) alignments directly on BAM file"
keywords = ["alignment", "minimap2", "long-read", "bam"]
readme = "README.md"
repository = "https://github.com/wangyibin/bammap2" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "bammap2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.4.10" }
chrono = { version = "0.4.24" }
crossbeam = "0.8.4"
env_logger = { version = "0.10.0" }
minimap2 = { version = "0.1.28",  features = ["simde", "zlib-ng", "htslib"]}
minimap2-sys = {version = "0.1.24"}
log = { version = "0.4.17" }
libc = { version = "0.2" }
jemallocator = { version = "0.5.4 " }
rayon = { version = "1.11.0" }
rust-htslib = { version = "0.51.0", default-features = false }

[profile.dev]
opt-level = 1
overflow-checks = false


[profile.release]
opt-level = 'z'
lto = true
codegen-units  = 1
strip = "symbols"

# opt-level = 3
# lto = "fat"
# codegen-units  = 1

[profile.dist]
inherits = "release"
lto = true
opt-level = "z" 
strip = "symbols"
codegen-units = 1